--- a/packages/themes/src/mixins/skeleton/click.css
+++ b/packages/themes/src/mixins/skeleton/click.css
@@ -1,8 +1,9 @@
 @define-mixin skeleton-click {
     /* theme */
-    --skeleton-default-color: var(--color-light-graphic-quaternary);
+    --skeleton-default-color: transparent;
     --skeleton-border-radius: var(--border-radius-s);
     --skeleton-backdrop-filter: blur(20px);
     --skeleton-gradient-animation-display: none;
     --skeleton-bg-animation-display: block;
+    --skeleton-bg-animation-color: var(--color-light-graphic-quaternary);
 }
